# rauto

./: read_data.m
1b/: mwpsolver.m  project1b_q1.m  project1b_q2.m  project1b_q3.m  project1b_q4.m  project1b_q5.m  zeromsg.m
2a/: project2a_q1.m  project2a_q2.m
2a/lib/: eightpoint_norm.m  getRt.m  ransacF.m  sevenpoint_norm.m
2a/mat/: EF.mat  cameraParameter.mat  good2.mat  goodresult.mat  matching20results.mat  params.mat  pts0001.mat  pts0001_15.mat  pts0072.mat  pts0072back.mat  pts3400.mat
2a/writeup/: camcalib.m  eightpoint_norm.m  epipole.m  getRt.m  proj2a.aux  proj2a.tex  project2a_q1.m  (+1 more)
2b/: plotting.m  project2b_q1_2d3d.m  project2b_q1_3d3d.m
3/: project3.m  project3d1.m  project3d2.m
project1b/: dercoeff.m  elliptcal.mat  elliptical.mat  executor.m  grotesque.mat  hat.m  mwpsolver.m  mwptraj.m  plantraj.m  test.m  trajtest.m  trajval.m  vee.m
project2b/: camat2rt.m  camat2rti.m  cameramat.m  camtrans.m  camtrf.m  findmatch.m  findmatches.m  fundamat.m  hat.m  imload.m  impreproc.m  launch_ukf.m  normalize.m  optmatch.m  q1run.m  ransacF.m  ransacf.m  ransacfm.m  read_data.m  reconstruct.m  runq1.m  sandbox.m  triangulate.m  triangulateb.m
project2b-old/: camtrans.m  findmatch.m  fundamat.m  loadim.m  ransacf.m  reconstruct.m  runq1.m  triangulate.m
project4/playground/navigator/: CMakeLists.txt
project4/playground/navigator/matlab/: Navigator.m  example.m  make.m  navigator.m
project4/playground/navigator/src/: .navigator.cc.swp  class_handle.h  compilecmd  launcher.cc  navigator.cc  navigator.h  navigator_mex.cc  navigator_mex.mexa64
(+191 files in other folders)
